# Automated-course-evaluation

./: .gitignore  README.md  config.example.toml  courses.example.json  pyproject.toml
src/: config.py  err.py  main.py
src/model/: __init__.py  class_model.py
src/pages/: __init__.py  course_management.py  login.py
src/utils/: __init__.py
